--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="col-lg-4 col-md-6 col-sm-12 d-none d-md-block">
                             <div class="footer-widget-area">
                                 <div class="widget-title">
                                     <h4>Explore</h4>
