Comment out html code

--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
         </header>
 
         <main class="main-wrapper">
-            <!-- Slider main container -->
+
+            <!-- Begin Hero Slider -->
             <section class="swiper-container" id="hero-slider">
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
@@ -221,6 +222,7 @@
                 <!-- If we need pagination -->
                 <div class="swiper-pagination"></div>
 
+                <!-- Begin Social Icons on Hero slider -->
                 <div class="social-icons">
                     <ul>
                         <li>
@@ -245,9 +247,12 @@
                         </li>
                     </ul>
                 </div>
+                <!-- End Social Icons on Hero slider -->
 
             </section>
+            <!-- Begin Hero slider -->
 
+            <!-- Begin Collection Products Slider -->
             <section class="home-collection">
                 <div class="container">
                     <div class="row">
@@ -328,7 +333,9 @@
                     </div>
                 </div>
             </section>
+            <!-- End Collection Products Slider -->
 
+            <!-- Begin Home Services -->
             <section class="home-services">
                 <div class="container">
                     <div class="row">
@@ -365,7 +372,9 @@
                     </div>
                 </div>
             </section>
+            <!-- End Home Services -->
 
+            <!-- Begin Home Custom Content -->
             <section class="home-custom-content">
                 <div class="container">
                     <div class="inner wow animate__animated animate__fadeIn" data-wow-delay="100ms">
@@ -386,7 +395,9 @@
                     </div>
                 </div>
             </section>
+            <!-- End Home Custom Content -->
 
+            <!-- Begin Choose Our Services -->
             <section class="choose-our-services">
                 <div class="container">
                     <div class="row">
@@ -497,7 +508,9 @@
                     </div>
                 </div>
             </section>
+            <!-- End Choose Our Services -->
 
+            <!-- Begin Testimonials Slider -->
             <section class="testimonials-swiper">
                 <div class="container">
                     <div class="testimonials-subtitle wow animate__animated animate__fadeIn">
@@ -544,7 +557,9 @@
                     </div>
                 </div>
             </section>
+            <!-- End Testimonials Slider -->
 
+            <!-- Begin Home Partners -->
             <section class="home-partners">
                 <div class="container">
                     <div class="row">
@@ -599,7 +614,9 @@
                     </div>
                 </div>
             </section>
+            <!-- End Home Partners -->
 
+            <!-- Begin Our Portfolio -->
             <section class="our-portfolio">
                 <div class="container">
                     <div class="portfolio-subtitle">
@@ -686,8 +703,11 @@
                         <a href="#" class="btn btn-secondary btn-lg">View More</a>
                     </div>
             </section>
+            <!-- Begin Our Portfolio -->
         </main>
+
         <footer>
+            <!-- Begin Footer Subscribe Form -->
             <section class="subscribe-wrapper">
                 <div class="container">
                     <div class="subscribe-form">
@@ -699,7 +719,9 @@
                     </div>
                 </div>
             </section>
+            <!-- End Footer Subscribe Form -->
 
+            <!-- Begin Footer Columns -->
             <section class="footer-wrapper">
                 <div class="container">
                     <div class="row">
@@ -824,23 +846,32 @@
                     </div>
                 </div>
             </section>
+            <!-- End Footer Columns -->
 
+            <!-- Begin Footer Copyright -->
             <section class="footer-copyright">
                 <div class="container">
                     <p><a href="#">happyduong</a> © All Rights Reserved - 2023</p>
                 </div>
             </section>
+            <!-- End Footer Copyright -->
         </footer>
 
+        <!-- Begin Booking Button -->
         <a href="#" class="booking-now" id="booking-now" title="Booking">
             <i class="fa fa-calendar"></i>
         </a>
+        <!-- End Booking Button -->
 
+        <!-- Begin Call Button -->
         <a href="#" class="call-now" id="call-now" title="Call">
             <i class="fa fa-phone"></i>
         </a>
+        <!-- End Call Button -->
 
+        <!-- Begin Scroll To Top Button -->
         <a href="javascript:void(0)" class="back-to-top" id="back-to-top" title="Scroll To Top"></a>
+        <!-- End Scroll To Top Button -->
     </div>
 
     <script src="assets/js/jquery.min.js"></script>
