bổ sung sub menu level 3

--- a/index.html
+++ b/index.html
@@ -47,10 +47,38 @@
                                                 <span>Home page 1</span>
                                             </a>
                                         </li>
-                                        <li>
+                                        <li class="has-sub-menu">
                                             <a href="#">
                                                 <span>Home page 2</span>
                                             </a>
+                                            <span class="toggle-menu"><i class="fa fa-angle-right"></i></span>
+                                            <ul class="sub-menu">
+                                                <li>
+                                                    <a href="#">
+                                                        <span>Home page 1</span>
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="#">
+                                                        <span>Home page 2</span>
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="#">
+                                                        <span>Home page 3</span>
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="#">
+                                                        <span>Home page 4</span>
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="#">
+                                                        <span>Home page 5</span>
+                                                    </a>
+                                                </li>
+                                            </ul>
                                         </li>
                                         <li>
                                             <a href="#">
